--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ Use it to make something cool, have fun, and share what you've learned with othe
 
 * { box-sizing: border-box; }
 
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+    font-weight: 400;
+}
+
 /* Responsive images */
 .entry-content img,
 .comment-content img,
@@ -534,9 +538,9 @@ h1 a {
 #menu-events .menu-item a {
     height: 120px;
     color: #fff;
-    font-weight: 400;
+    font-weight: 100;
     font-size: 32px;
-    text-shadow: 0px 1px 8px #000;
+    text-shadow: 0px 1px 1px rgba(0,0,0,0.3);
     display: block;
     background-position-x: 50%;
     background-position-y: bottom;
@@ -545,10 +549,16 @@ h1 a {
     -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
        -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
             box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-
-    padding: 0.5em 77% 0.5em 6%;
+    padding: 0.4em 76% 0.5em 6%;
     margin: 0 9% 1em 9%;
-    line-height: 1.3em;
+    line-height: 1.2em;
+}
+@media (max-width: 768px) {
+    #menu-events .menu-item a {
+        font-size: 26px;
+        margin-right: 0px;
+        margin-left: 0px;
+    }
 }
 
 /* 350px x 180px */
