Lots of changes
- added colors
- added parallax header background
- added home page layout and elements

--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -7,3 +7,12 @@ $sidebar-sm-columns:    4;
 
 // Colors
 $brand-primary:         #27ae60;
+
+$dark-blue: rgb(7, 57, 89);
+$light-blue: rgb(54, 106, 139);
+
+$dark-green: rgb(40, 96, 34);
+$medium-green: rgb(75, 122, 61);
+$light-green: rgb(120, 157, 103);
+
+$grey: rgb(119, 119, 119);
