--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -1,37 +1,112 @@
+@import "common/_variables";
+
 $delay: 1000ms;
 $animation-speed: 300ms;
 
 header {
-    background-color: #aaa;
-    min-height: 150px;
+    background-color: #fff;
+    position: relative;
+    z-index: 25;
+    height: 150px;
+
+    .header-parallax {
+        height: 100%;
+        width: 100%;
+        overflow: hidden;
+        position: absolute;
+
+        img {
+            position: absolute;
+            bottom: 0;
+
+            &.mountains {
+                left: 0;
+            }
+            &.foothills.left {
+                left: 0;
+            }
+            &.foothills.right {
+                right: 0;
+            }
+            &.trees.left {
+                left: 0;
+            }
+            &.trees.right {
+                right: 0;
+            }
+        }
+        .bg {
+            position: absolute;
+            width: 100%;
+            left: 0;
+            right: 0;
+            bottom: 0;
+
+            &.mountains {
+                background: #8CB485;
+                height: 40px;
+            }
+            &.foothills {
+                background: #598F4D;
+                height: 20px;
+            }
+            &.trees {
+                background: #377B2A;
+                height: 3px;
+            }
+        }
+    }
 
     h1 {
         margin: 0;
         padding: 0;
     }
+
+    .header-right {
+        text-align: right;
+    }
 }
 
+@media screen and (max-width: 767px) {
+    header {
+        text-align: center;
+        .header-right {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+    }
+}
+
+$nav-color: $dark-blue;
+$hover-color: $light-blue;
+$nav-text: #fff;
+
 nav {
-    background-color: #eee;
+    background-color: $nav-color;
+    color: $nav-text;
     position: relative;
+    overflow-scrolling: touch;
 
     .menu, .sub-menu {
         width: 100%;
         margin: 0;
         padding: 0;
         position: relative;
-        background-color: #eee;
+        background-color: $nav-color;
 
         .menu-item {
-            background-color: #eee;
+            background-color: $nav-color;
 
             a {
-                padding: 5px 0;
+                color: $nav-text;
+                padding: 5px 8px;
                 font-size: 1.6rem;
                 display: inline-block;
                 width: 100%;
+                font-weight: bold;
 
                 &:hover, &:focus {
+                    color: darken($nav-text, 20%);
                     text-decoration: none;
                 }
             }
@@ -41,12 +116,13 @@ nav {
 
             &.current_page_item, &.current-page-ancestor,
             &:hover, &:focus {
-                background-color: #ccc;
+                background-color: $hover-color;
             }
         }
     }
 }
 
+// Desktop styling
 @media screen and (min-width: 768px) {
     nav {
         text-align: center;
@@ -55,16 +131,16 @@ nav {
         .menu, .sub-menu {
             display: table;
             transition-delay: $delay;
-            -webkit-transform-style: preserve-3d;
-            -webkit-backface-visibility: hidden;
+            transform-style: preserve-3d;
+            backface-visibility: hidden;
 
             .menu-item {
                 display: table-cell;
                 vertical-align: top;
                 transition: background-color 10ms;
                 transition-delay: $delay;
-                -webkit-transform-style: flat;
-                -webkit-backface-visibility: visible;
+                transform-style: flat;
+                backface-visibility: visible;
 
                 &#menu-item-15 {
                     display: none;
@@ -77,7 +153,7 @@ nav {
                         ~ .sub-menu {
                             z-index: -2;
                             transition-delay: 0ms;
-                            -webkit-transform: translateY(0);
+                            transform: translateY(0);
                         }
                     }
                 }
@@ -88,27 +164,27 @@ nav {
                     .sub-menu {
                         z-index: -2;
                         transition-delay: 0ms;
-                        -webkit-transform: translateY(0);
+                        transform: translateY(0);
                     }
                 }
 
                 .sub-menu {
                     z-index: -5;
-                    -webkit-transform: translateY(-100%);
-                    transition: -webkit-transform $animation-speed ease-in-out, z-index 0ms step-start;
+                    transform: translateY(-100%);
+                    transition: transform $animation-speed ease-in-out, z-index 0ms step-start;
                     transition-delay: $delay;
                     position: absolute;
                     left: 0;
-                    background-color: #ccc;
+                    background-color: $hover-color;
 
                     &:hover, &:focus {
                         z-index: -2;
                         transition-delay: 0ms;
-                        -webkit-transform: translateY(0);
+                        transform: translateY(0);
                     }
 
                     .menu-item {
-                        background-color: #ccc;
+                        background-color: $hover-color;
                     }
                 }
 
@@ -117,10 +193,13 @@ nav {
                     a:focus,
                     .sub-menu {
                         z-index: -12 !important;
-                        -webkit-transform: translateY(0);
+                        transform: translateY(0);
                     }
                 }
 
+                &.current_page_item > a {
+                    color: darken($nav-text, 20%);
+                }
             }
 
             &:hover, &:focus {
@@ -137,19 +216,15 @@ nav {
 }
 
 #mobile-nav-toggle {
-    width: 20px;
-    height: 17px;
+    width: 52px;
+    height: 40px;
+    padding: 6px;
+    display: block;
+    text-align: center;
     position: absolute;
     top: 0;
-    right: 5px;
-    margin: 10px;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
+    right: 0px;
     transform: rotate(0deg);
-    -webkit-transition: ($animation-speed * 2) ease-in-out $animation-speed;
-    -moz-transition: ($animation-speed * 2) ease-in-out $animation-speed;
-    -o-transition: ($animation-speed * 2) ease-in-out $animation-speed;
     transition: ($animation-speed * 2) ease-in-out $animation-speed;
     cursor: pointer;
 
@@ -159,36 +234,27 @@ nav {
         &:nth-child(3) {
             display: block;
             position: absolute;
-            height: 3px;
-            width: 100%;
+            height: 4px;
+            width: 53.846%; // 28px
             background: #222;
             border-radius: 3px;
             opacity: 1;
-            left: 0;
-            -webkit-transform: rotate(0deg);
-            -moz-transform: rotate(0deg);
-            -o-transform: rotate(0deg);
+            left: 12px;
             transform: rotate(0deg);
-            -webkit-transition: $animation-speed ease-in-out;
-            -moz-transition: $animation-speed ease-in-out;
-            -o-transition: $animation-speed ease-in-out;
             transition: $animation-speed ease-in-out;
-            -webkit-transform-origin: left center;
-            -moz-transform-origin: left center;
-            -o-transform-origin: left center;
             transform-origin: left center;
         }
 
         &:nth-child(1) {
-            top: 0px;
+            top: 10px;
         }
 
         &:nth-child(2) {
-            top: 7px;
+            top: 18px;
         }
 
         &:nth-child(3) {
-            top: 14px;
+            top: 26px;
         }
     }
 }
@@ -198,38 +264,30 @@ nav {
         &:nth-child(1),
         &:nth-child(2),
         &:nth-child(3) {
-            -webkit-transition: ($animation-speed * 1.5) ease-in-out $animation-speed;
-            -moz-transition: ($animation-speed * 1.5) ease-in-out $animation-speed;
-            -o-transition: ($animation-speed * 1.5) ease-in-out $animation-speed;
             transition: ($animation-speed * 1.5) ease-in-out $animation-speed;
         }
 
         &:nth-child(1) {
-            -webkit-transform: rotate(45deg);
-            -moz-transform: rotate(45deg);
-            -o-transform: rotate(45deg);
             transform: rotate(45deg);
-            top: -1px;
-            left: 3px;
+            top: 8px;
+            left: 16px;
         }
 
         &:nth-child(2) {
             opacity: 0;
-            left: 3px;
+            left: 16px;
             width: 0;
         }
 
         &:nth-child(3) {
-            -webkit-transform: rotate(-45deg);
-            -moz-transform: rotate(-45deg);
-            -o-transform: rotate(-45deg);
             transform: rotate(-45deg);
-            top: 13px;
-            left: 3px;
+            top: 28px;
+            left: 16px;
         }
     }
 }
 
+// Mobile styling
 @media screen and (max-width: 767px) {
     nav {
         text-align: left;
@@ -241,7 +299,8 @@ nav {
         display: block;
         position: relative;
 
-        &::-webkit-scrollbar {
+        &::scrollbar,
+        *::scrollbar {
             display: none;
         }
 
@@ -257,6 +316,7 @@ nav {
             overflow-x: hidden;
             overflow-y: scroll;
             position: fixed;
+            z-index: 30;
             left: 0;
             right: 0;
             top: 0;
@@ -283,8 +343,9 @@ nav {
                 }
 
                 a {
-                    padding-top: 7px;
-                    padding-bottom: 7px;
+                    padding-top: 6px;
+                    padding-bottom: 6px;
+                    font-size: 2rem;
                     &:hover, &:focus {
                         ~ .sub-menu {
                         }
@@ -299,15 +360,16 @@ nav {
                 .sub-menu {
                     display: none;
                     overflow: hidden;
-                    background-color: #eee;
+                    background-color: $nav-color;
 
                     .menu-item,
                     a {
                         background-color: transparent;
+                        font-size: 1.8rem;
 
                         &.current_page_item,
                         &:hover, &:focus {
-                            background-color: #ccc;
+                            background-color: $hover-color;
                         }
                     }
                 }
@@ -332,7 +394,7 @@ nav {
             box-sizing: content-box;
             position: relative;
             border-top: 1px solid #d2d2d2;
-            border-bottom: 1px solid #ccc;
+            border-bottom: 1px solid $hover-color;
 
             a {
                 padding: 5px;
