--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -16,3 +16,7 @@ $medium-green: rgb(75, 122, 61);
 $light-green: rgb(120, 157, 103);
 
 $grey: rgb(119, 119, 119);
+
+// Fonts
+$header-font: "Lucida Grande", "Lucida Sans Unicode", Arial, sans-serif;
+$body-font: "Myriad Pro", "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
