--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -6,8 +6,10 @@
 // endbower
 
 @import "common/_global";
+@import "components/_anchor-links";
 @import "components/_buttons";
 @import "components/_comments";
+@import "components/_countdown";
 @import "components/_forms";
 @import "components/_grid";
 @import "components/_social-media";
