--- a/assets/styles/components/_sponsors.scss
+++ b/assets/styles/components/_sponsors.scss
@@ -4,6 +4,7 @@
 }
 .individual-sponsor img {
     width: 100%;
+    height: auto;
     margin: 0px;
     box-sizing: border-box;
     border: 1px solid #fff;
