--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -7,7 +7,8 @@ header {
     background-color: #fff;
     position: relative;
     z-index: 25;
-    min-height: 150px;
+    // min-height: 150px;
+    padding-bottom: 20px;
 
     .header-parallax {
         height: 100%;
@@ -35,6 +36,7 @@ header {
                 right: 0;
             }
         }
+
         .bg {
             position: absolute;
             width: 100%;
@@ -70,6 +72,7 @@ header {
 
     .header-right {
         text-align: right;
+
         h3, p {
             font-family: $header-font;
             margin-bottom: 5px;
@@ -84,9 +87,10 @@ header {
 @media screen and (max-width: 767px) {
     header {
         text-align: center;
+
         .header-right {
             text-align: center;
-            margin-bottom: 20px;
+
             h3, p {
                 background-color: rgba(255, 255, 255, 0.3);
             }
