Added course page. (and other stuff)

--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -20,3 +20,8 @@ $grey: rgb(119, 119, 119);
 // Fonts
 $header-font: "Lucida Grande", "Lucida Sans Unicode", Arial, sans-serif;
 $body-font: "Myriad Pro", "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
+
+
+$nav-color: $dark-blue;
+$hover-color: $light-blue;
+$nav-text: #fff;
