--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -12,6 +12,7 @@
 @import "components/_countdown";
 @import "components/_forms";
 @import "components/_grid";
+@import "components/_map";
 @import "components/_social-media";
 @import "components/_sponsors";
 @import "components/_wp-classes";
