Tweaks for production.

--- a/assets/styles/components/_social-media.scss
+++ b/assets/styles/components/_social-media.scss
@@ -23,7 +23,7 @@
 
     .facebook {
         max-width: 100%;
-        overflow-x: hidden;
+        overflow: hidden;
 
         > div {
             top: -2px;
