--- a/assets/styles/components/_sponsors.scss
+++ b/assets/styles/components/_sponsors.scss
@@ -1,11 +1,17 @@
 .individual-sponsor {
     margin-bottom: 15px;
     position: relative;
-}
-.individual-sponsor img {
-    width: 100%;
-    height: auto;
-    margin: 0px;
-    box-sizing: border-box;
-    border: 1px solid #fff;
+
+    a {
+        display: inline-block;
+        padding: 5px;
+    }
+
+    img {
+        width: 100%;
+        height: auto;
+        margin: 0px;
+        box-sizing: border-box;
+        border: 1px solid #fff;
+    }
 }
