sponsors css tweak

--- a/assets/styles/components/_sponsors.scss
+++ b/assets/styles/components/_sponsors.scss
@@ -15,3 +15,9 @@
         border: 1px solid #fff;
     }
 }
+
+.widget_fancy_sponsors_block {
+    .sponsor-img {
+        text-align: center;
+    }
+}
