--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name:         Sage Starter Theme
-Theme URI:          https://roots.io/sage/
-Description:        Sage is a WordPress starter theme. <a href="https://github.com/roots/sage">Contribute on GitHub</a>
-Version:            8.2.1
-Author:             Roots
-Author URI:         https://roots.io/
+Theme Name:         NODM
+Theme URI:          https://github.com/apexskier/nodm-wp-theme
+Description:
+Version:            5.0.1
+Author:             Cameron Little && Roots
+Author URI:         http://camlittle.com/
 
 License:            MIT License
 License URI:        http://opensource.org/licenses/MIT
