Unhid first menu items

--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -165,9 +165,9 @@ nav {
                 transform-style: flat;
                 backface-visibility: visible;
 
-                &:first-child {
-                    display: none;
-                }
+                // &:first-child {
+                //     display: none;
+                // }
 
                 a {
                     vertical-align: middle;
